--- a/style.css
+++ b/style.css
@@ -18,9 +18,23 @@
     align-items: center;
   }
  
-  h1{
+  h1,
+  h2{
    /* margin:10% 0 0 20%;*/
       text-align:center;
+      font-family: sans-serif;
+      font-weight: 400;
+      color:#333;
+      font-family: 'Montserrat', sans-serif;
+
+  }
+
+  h2{
+      margin-bottom: 2rem;
+  }
+
+  #aqui{
+      margin-top:2rem;
   }
   ul{
     list-style:none;
